# web_demo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  config.toml  rustfmt.toml
actix_web_demo/: Cargo.toml  README.md
actix_web_demo/src/: controller.rs  main.rs  model  repository.rs  service.rs
actix_web_demo/src/controllers/: mod.rs
actix_web_demo/src/controllers/dept/: controller.rs
actix_web_demo/src/controllers/index/: controller.rs  mod.rs
actix_web_demo/src/models/: dept.rs
actix_web_demo/src/repositories/: mod.rs
actix_web_demo/src/repositories/dept/: mod.rs
actix_web_demo/src/repositories/dept/diesel_impl/: mod.rs
actix_web_demo/src/repositories/dept/seaorm_impl/: mod.rs
actix_web_demo/src/repositories/dept/sqlx_impl/: mod.rs
actix_web_demo/src/services/dept/: dept_service.rs  dept_service_impl.rs  mod.rs
actix_web_demo/src/views/: mod.rs
actix_web_demo/tests/: integration_test.rs
axum_demo/: Cargo.toml  README.md
axum_demo/src/: main.rs
axum_demo/src/controllers/dept/: controller.rs
axum_demo/src/controllers/index/: controller.rs
axum_demo/src/entities/: sys_dept.rs
axum_demo/src/models/: dept.rs  mod.rs
axum_demo/src/params/: dept_param.rs
axum_demo/src/repositories/dept/: dept_repository.rs
axum_demo/src/repositories/dept/diesel_impl/: mod.rs
axum_demo/src/repositories/dept/seaorm_impl/: mod.rs
axum_demo/src/repositories/dept/sqlx_impl/: mod.rs
axum_demo/src/services/: mod.rs
axum_demo/src/services/dept/: dept_service.rs  dept_service_impl.rs
axum_demo/src/views/: dept_tree.rs  dept_vo.rs
common_core/: Cargo.toml
common_core/src/: lib.rs
common_lib/: Cargo.toml
common_lib/src/: lib.rs
common_lib/src/enums/: mod.rs  wrapper_err.rs
common_lib/src/wrapper/: list_wrapper.rs  mod.rs  object_wrapper.rs  page_wrapper.rs  response_trait.rs  response_wrapper.rs
common_validation/: Cargo.toml  README.md
common_validation/common_validation_macros /: Cargo.toml
common_validation/common_validation_macros/src/: lib.rs
common_validation/src/: lib.rs
common_validation/src/enums/: date_time_format.rs  mod.rs  validate_rules.rs  validation_error.rs  validation_rules.rs
common_validation/tests/: integration_test.rs
common_validation_macros/: Cargo.toml  README.md
common_validation_macros/src/: lib.rs
common_validation_macros/tests/: integration_test.rs
common_wrapper/: Cargo.toml  README.md
common_wrapper/src/: lib.rs
common_wrapper/src/enums/: gender_enum.rs  mod.rs  status_enum.rs  wrapper_err.rs
common_wrapper/src/wrapper/: list_wrapper.rs  mod.rs  object_wrapper.rs  page_info.rs  page_wrapper.rs  response_trait.rs  response_wrapper.rs  rocket_responder.rs  single_wrapper.rs
common_wrapper/tests/: integration_test.rs
rocket_demo/: Cargo.toml  README.md  Rocket.toml
rocket_demo/src/: config.rs  main.rs
rocket_demo/src/controllers/: mod.rs
rocket_demo/src/controllers/dept/: controller.rs  mod.rs
rocket_demo/src/controllers/index/: controller.rs
rocket_demo/src/controllers/menu/: controller.rs  mod.rs
rocket_demo/src/controllers/role/: controller.rs  mod.rs
rocket_demo/src/controllers/user/: controller.rs  mod.rs
rocket_demo/src/entities/: mod.rs  prelude.rs
rocket_demo/src/models/: dept.rs  menu.rs  mod.rs  role.rs  role_menu.rs  user.rs  user_role.rs
rocket_demo/src/params/: dept_param.rs  menu_param.rs  mod.rs  page_param.rs  role_param.rs  user_param.rs
rocket_demo/src/repositories/: mod.rs
rocket_demo/src/repositories/dept/: dept_repository.rs  diesel_impl.rs  mod.rs  seaorm_impl.rs  sqlx_impl.rs
rocket_demo/src/repositories/dept/diesel_impl/: mod.rs
rocket_demo/src/repositories/dept/seaorm_impl/: mod.rs
rocket_demo/src/repositories/dept/sqlx_impl/: mod.rs
rocket_demo/src/repositories/menu/: diesel_impl.rs  menu_repository.rs  mod.rs  seaorm_impl.rs  sqlx_impl.rs
rocket_demo/src/repositories/role/: diesel_impl.rs  mod.rs  role_repository.rs  seaorm_impl.rs  sqlx_impl.rs
rocket_demo/src/repositories/role_menu/: diesel_impl.rs  mod.rs  role_menu_repository.rs  seaorm_impl.rs  sqlx_impl.rs
rocket_demo/src/repositories/user/: diesel_impl.rs  mod.rs  seaorm_impl.rs  sqlx_impl.rs  user_repository.rs
rocket_demo/src/repositories/user_role/: diesel_impl.rs  mod.rs  seaorm_impl.rs  sqlx_impl.rs  user_role_repository.rs
rocket_demo/src/schema/: mod.rs
rocket_demo/src/services/: mod.rs
rocket_demo/src/services/dept/: dept_service.rs  dept_service_impl.rs
rocket_demo/src/services/menu/: menu_service.rs  menu_service_impl.rs  mod.rs
rocket_demo/src/services/params/: mod.rs  page_param.rs  user_param.rs
rocket_demo/src/services/role/: mod.rs  role_service.rs  role_service_impl.rs
rocket_demo/src/services/user/: mod.rs  user_service.rs  user_service_impl.rs
rocket_demo/src/views/: dept_vo.rs  mod.rs
rocket_demo/tests/: e2e_test.rs
sql/: demo.sql
